# 3DModelScaner

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build.sh
CMakeShare/: CompileShader_CMakeLists.txt  Qt_CMakeLists.txt
Graphic/: BufferDescr.cpp  BufferDescr.hpp  CMakeLists.txt  DrawManager.cpp  DrawManager.hpp  GraphicObject.cpp  GraphicObject.hpp  ImageDescr.cpp  ImageViewDescr.cpp  ImageViewDescr.hpp  PipelineManager.cpp  ResourceManager.cpp  ResourceManager.hpp  SamplerDescr.cpp  SamplerDescr.hpp  Texture.hpp
Include/: Glm.hpp  IRenderable.hpp  VulkanTools.hpp
MainWindow/: BufferDescr.cpp  BufferDescr.hpp  CMakeLists.txt  Cube.cpp  Cube.hpp  GraphicObject.cpp  GraphicObject.hpp  ImageDescr.cpp  ImageDescr.hpp  ImageViewDescr.hpp  MainWindow.cpp  MainWindow.hpp  PipelineManager.cpp  PipelineManager.hpp  SamplerDescr.cpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanWindow.cpp  VulkanWindow.hpp  main.cpp
resources/shaders/: calc_position.vert  calc_position_uv.vert  color_help_see_direction.frag  gradient.frag  texture.frag
